[gd_scene load_steps=14 format=3 uid="uid://c3r1ab2drkvfs"]

[ext_resource type="Script" path="res://main/Main.gd" id="1_v6equ"]
[ext_resource type="Resource" uid="uid://ccqu5caecadbp" path="res://Dialogues/First_Cutscene.dialogue" id="2_3mq3n"]
[ext_resource type="PackedScene" uid="uid://dwa8si8w0titb" path="res://Player/Player.tscn" id="2_8vvfa"]
[ext_resource type="Script" path="res://main/Level_Loader.gd" id="4_4rk0h"]
[ext_resource type="PackedScene" uid="uid://i7g2tbb285kn" path="res://UI/hud.tscn" id="4_h25yw"]
[ext_resource type="PackedScene" uid="uid://bkp6ouubjdwkl" path="res://inventory.tscn" id="5_wdww8"]
[ext_resource type="Script" path="res://inventory/Inventory_Interface.gd" id="6_cwhjr"]
[ext_resource type="Texture2D" uid="uid://djvlk1dppr2wh" path="res://Item/inventory_sprites/Inventory-Menu-Sprite.png" id="7_gvuxq"]
[ext_resource type="Texture2D" uid="uid://drqwuqvdkq570" path="res://icon.svg" id="7_k8pq7"]
[ext_resource type="Script" path="res://main/BulletManager.gd" id="10_yb7pm"]
[ext_resource type="Resource" uid="uid://cr5a3adq5i3rm" path="res://Dialogues/item_dialogues.dialogue" id="11_ehuts"]
[ext_resource type="Script" path="res://main/EnemyManager.gd" id="12_twlh3"]
[ext_resource type="Resource" uid="uid://d364pxihkgxw2" path="res://inventory/chatter_inventory.tres" id="13_g7ibe"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_v6equ")
dialogue_resource = ExtResource("2_3mq3n")
item_dialogues = ExtResource("11_ehuts")

[node name="World" type="Node2D" parent="."]
script = ExtResource("4_4rk0h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_h25yw")]
offset_left = 2.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = -1.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI" groups=["Inventory_Interface"]]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource("6_cwhjr")

[node name="CharacterImage" type="TextureRect" parent="UI/InventoryInterface"]
top_level = true
layout_mode = 0
offset_left = 60.0
offset_top = 395.0
offset_right = 710.0
offset_bottom = 995.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_k8pq7")

[node name="InventoryMenuTexture" type="TextureRect" parent="UI/InventoryInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_gvuxq")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("5_wdww8")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.675
anchor_top = 0.206
anchor_right = 0.944
anchor_bottom = 0.75
offset_left = -0.600037
offset_top = -9.48801
offset_right = 21.512
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2.3, 1.3)

[node name="EquipedItemTexture" type="TextureRect" parent="UI/InventoryInterface"]
layout_mode = 0
offset_left = 573.0
offset_top = 400.0
offset_right = 712.0
offset_bottom = 482.0

[node name="Description" type="Label" parent="UI/InventoryInterface"]
layout_mode = 0
offset_left = 41.0
offset_top = 514.0
offset_right = 710.0
offset_bottom = 595.0

[node name="item_option_container" type="GridContainer" parent="UI/InventoryInterface"]
layout_mode = 0
offset_left = 751.0
offset_top = 20.0
offset_right = 973.0
offset_bottom = 75.0
scale = Vector2(1.62, 1.62)
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 9
columns = 2

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource("10_yb7pm")

[node name="EnemyManager" type="Node2D" parent="."]
script = ExtResource("12_twlh3")

[node name="Player2d" type="Node2D" parent="."]
process_mode = 1

[node name="Player" parent="Player2d" instance=ExtResource("2_8vvfa")]
position = Vector2(10, 10)
inventory_data = ExtResource("13_g7ibe")
maximum_health = 10
